update css and html as well as webpack

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,184 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vigeb</title>
 </head>
 <body>
-    <h1>Vigeb</h1>
+    <header>
+        <div class="header">
+            <a href="/" class="header__logo">
+                <svg class="header__logo-icon">
+                    <use xlink:href="assets/images/sprite.svg#icon-vigeb"></use>
+                </svg>
+            </a>
+            <form action="" class="header__search">
+                <input type="text" class="header__search-input" placeholder="Tìm kỹ năng của tôi...">
+                <button class="header__search-button">
+                    <svg class="header__search-button-icon">
+                        <use xlink:href="assets/images/sprite.svg#icon-search"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
+        <nav class="header__nav">
+            <ul class="nav nav--row nav--header">
+                <li class="nav__item">
+                    <a href="#" class="nav__link nav__link--brand">
+                        Kỹ năng
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link nav__link--brand">
+                        Tài lẻ 
+                    </a>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link nav__link--brand">
+                        Liên hệ
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="section section-one">
+                <h1 class="section__title">Những thứ bạn có thể cần ở tôi</h1>
+                <div class="section__body">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <span class="card__title">
+                                        Vue.js
+                                    </span>
+                                </div>
+                                <div class="card__body">
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur saepe pariatur...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <span class="card__title">
+                                        Html and css
+                                    </span>
+                                </div>
+                                <div class="card__body">
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur saepe pariatur...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <span class="card__title">
+                                        Webpack postcss
+                                    </span>
+                                </div>
+                                <div class="card__body">
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur saepe pariatur...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <span class="card__title">
+                                        Firebase
+                                    </span>
+                                </div>
+                                <div class="card__body">
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur saepe pariatur...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <span class="card__title">
+                                        Vue.js
+                                    </span>
+                                </div>
+                                <div class="card__body">
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur saepe pariatur...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <span class="card__title">
+                                        Html and css
+                                    </span>
+                                </div>
+                                <div class="card__body">
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur saepe pariatur...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <span class="card__title">
+                                        Webpack postcss
+                                    </span>
+                                </div>
+                                <div class="card__body">
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur saepe pariatur...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <span class="card__title">
+                                        Firebase
+                                    </span>
+                                </div>
+                                <div class="card__body">
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur saepe pariatur...
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
+    <script src="bundled.js"></script>
 </body>
 </html>
