--- a/app/index.html
+++ b/app/index.html
@@ -22,102 +22,116 @@
                 </button>
             </form>
         </div>
-        <nav class="header__nav">
-            <ul class="nav nav--row nav--header">
-                <li class="nav__item">
-                    <a href="#" class="nav__link nav__link--brand">
-                        Kỹ năng
-                    </a>
-                </li>
-                <li class="nav__item">
-                    <a href="#" class="nav__link nav__link--brand">
-                        Tài lẻ 
-                    </a>
-                </li>
-                <li class="nav__item">
-                    <a href="#" class="nav__link nav__link--brand">
-                        Liên hệ
-                    </a>
-                </li>
-            </ul>
-        </nav>
     </header>
     <main class="main">
-        <section class="section section-one">
-            <h1 class="section__title">Những thứ bạn có thể cần ở tôi</h1>
-            <div class="section__body">
-                <div class="row">
-                    <div class="col-6">
-                        <div class="card">
-                            <div class="card__header">
-                                <div class="card__badge">
+        <div class="section">
+            <section class="section-one" id="section-one">
+                <h1 class="section__title">Những thứ bạn có thể cần ở tôi</h1>
+                <div class="section__body">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <svg class="card__header-svg">
+                                        <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
+                                    </svg>
                                 </div>
-                                <h3 class="card__title">
-                                    Html and css
-                                </h3>
-                            </div>
-                            <div class="card__body">
-                                <p class="card__text">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore illum nostrum itaque! A enim animi libero dicta error officiis quibusdam deleniti.
-                                </p>
+                                <div class="card__body">
+                                    <h3 class="card__title card__title-thumb">
+                                        This is the title
+                                    </h3>
+                                    <p class="card__text">
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="card">
-                            <div class="card__header">
-                                <div class="card__badge">
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <svg class="card__header-svg">
+                                        <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
+                                    </svg>
                                 </div>
-                                <h3 class="card__title">
-                                    Html and css
-                                </h3>
-                            </div>
-                            <div class="card__body">
-                                <p class="card__text">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore illum nostrum itaque! A enim animi libero dicta error officiis quibusdam deleniti.
-                                </p>
+                                <div class="card__body">
+                                    <h3 class="card__title card__title-thumb">
+                                        This is the title
+                                    </h3>
+                                    <p class="card__text">
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="card">
-                            <div class="card__header">
-                                <div class="card__badge">
+                        <div class="col-4">
+                            <div class="card">
+                                <div class="card__header">
+                                    <svg class="card__header-svg">
+                                        <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
+                                    </svg>
                                 </div>
-                                <h3 class="card__title">
-                                    Html and css
-                                </h3>
-                            </div>
-                            <div class="card__body">
-                                <p class="card__text">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore illum nostrum itaque! A enim animi libero dicta error officiis quibusdam deleniti.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="card">
-                            <div class="card__header">
-                                <div class="card__badge">
+                                <div class="card__body">
+                                    <h3 class="card__title card__title-thumb">
+                                        This is the title
+                                    </h3>
+                                    <p class="card__text">
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                    </p>
                                 </div>
-                                <h3 class="card__title">
-                                    Html and css
-                                </h3>
-                            </div>
-                            <div class="card__body">
-                                <p class="card__text">
-                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore illum nostrum itaque! A enim animi libero dicta error officiis quibusdam deleniti.
-                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
+            <section class="section-two" id="section-two">
+                <h1 class="section__title">Kỹ năng của tôi</h1>
+                <div class="section__body">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="card">
+                                <div class="card__body">
+                                    <div class="card__title--like-fb">
+                                        <div class="card__avatar">
+                                            <svg class="card__avatar-icon">
+                                                <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
+                                            </svg>
+                                        </div>
+                                        <h3 class="card__title">
+                                            This is the title
+                                        </h3>
+                                    </div>
+                                    <p class="card__text">
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div class="menu-bottom">
+            <nav class="menu-bottom__board">
+                <ul class="div nav--row nav--center">
+                    <li class="nav__item">
+                        <a href="#section-one" class="nav__link nav__link--brand">
+                            Kỹ năng
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#section-two" class="nav__link nav__link--brand">
+                            Tài lẻ 
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link nav__link--brand">
+                            Liên hệ
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </nav>
     </main>
-    <div style="width: 100%; position: fixed; bottom: 0; left: 0; z-index: -1;">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#002f6c" fill-opacity="1" d="M0,192L8.6,202.7C17.1,213,34,235,51,240C68.6,245,86,235,103,229.3C120,224,137,224,154,202.7C171.4,181,189,139,206,154.7C222.9,171,240,245,257,240C274.3,235,291,149,309,112C325.7,75,343,85,360,112C377.1,139,394,181,411,192C428.6,203,446,181,463,181.3C480,181,497,203,514,208C531.4,213,549,203,566,170.7C582.9,139,600,85,617,90.7C634.3,96,651,160,669,154.7C685.7,149,703,75,720,80C737.1,85,754,171,771,197.3C788.6,224,806,192,823,202.7C840,213,857,267,874,272C891.4,277,909,235,926,181.3C942.9,128,960,64,977,69.3C994.3,75,1011,149,1029,192C1045.7,235,1063,245,1080,250.7C1097.1,256,1114,256,1131,218.7C1148.6,181,1166,107,1183,90.7C1200,75,1217,117,1234,128C1251.4,139,1269,117,1286,138.7C1302.9,160,1320,224,1337,229.3C1354.3,235,1371,181,1389,176C1405.7,171,1423,213,1431,234.7L1440,256L1440,320L1431.4,320C1422.9,320,1406,320,1389,320C1371.4,320,1354,320,1337,320C1320,320,1303,320,1286,320C1268.6,320,1251,320,1234,320C1217.1,320,1200,320,1183,320C1165.7,320,1149,320,1131,320C1114.3,320,1097,320,1080,320C1062.9,320,1046,320,1029,320C1011.4,320,994,320,977,320C960,320,943,320,926,320C908.6,320,891,320,874,320C857.1,320,840,320,823,320C805.7,320,789,320,771,320C754.3,320,737,320,720,320C702.9,320,686,320,669,320C651.4,320,634,320,617,320C600,320,583,320,566,320C548.6,320,531,320,514,320C497.1,320,480,320,463,320C445.7,320,429,320,411,320C394.3,320,377,320,360,320C342.9,320,326,320,309,320C291.4,320,274,320,257,320C240,320,223,320,206,320C188.6,320,171,320,154,320C137.1,320,120,320,103,320C85.7,320,69,320,51,320C34.3,320,17,320,9,320L0,320Z"></path></svg>
-    </div>
     <script src="bundled.js"></script>
 </body>
 </html>
