new icons and responsive

--- a/app/index.html
+++ b/app/index.html
@@ -23,74 +23,83 @@
             </form>
         </div>
     </header>
+    <div style="width: 100%; height: 14rem; background-color: #0099ff; position: fixed; top: 4rem; left: 0; z-index: -1;">
+
+    </div>
     <main class="main">
         <div class="section">
             <section class="section-one" id="section-one">
                 <h1 class="section__title">Những thứ bạn có thể cần ở tôi</h1>
                 <div class="section__body">
                     <div class="row">
-                        <div class="col-4">
-                            <div class="card">
+                        <div class="col-12 col-md-4">
+                            <div class="card card--shadow-drop">
                                 <div class="card__header">
                                     <svg class="card__header-svg">
                                         <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
                                     </svg>
                                 </div>
-                                <div class="card__body">
+                                <div class="card__body card__body--bear-hidden">
                                     <h3 class="card__title card__title-thumb">
                                         This is the title
                                     </h3>
-                                    <p class="card__text">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
-                                    </p>
+                                    <div class="card__content card__content--center">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
-                            <div class="card">
+                        <div class="col-12 col-md-4">
+                            <div class="card card--shadow-drop">
                                 <div class="card__header">
                                     <svg class="card__header-svg">
                                         <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
                                     </svg>
                                 </div>
-                                <div class="card__body">
+                                <div class="card__body card__body--bear-hidden">
                                     <h3 class="card__title card__title-thumb">
                                         This is the title
                                     </h3>
-                                    <p class="card__text">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
-                                    </p>
+                                    <div class="card__content card__content--center">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4">
-                            <div class="card">
+                        <div class="col-12 col-md-4">
+                            <div class="card card--shadow-drop">
                                 <div class="card__header">
                                     <svg class="card__header-svg">
                                         <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
                                     </svg>
                                 </div>
-                                <div class="card__body">
+                                <div class="card__body card__body--bear-hidden">
                                     <h3 class="card__title card__title-thumb">
                                         This is the title
                                     </h3>
-                                    <p class="card__text">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
-                                    </p>
+                                    <div class="card__content card__content--center">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="section-two" id="section-two">
+            <section class="section-middle" id="section-two">
                 <h1 class="section__title">Kỹ năng của tôi</h1>
                 <div class="section__body">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-12 col-md-6">
                             <div class="card">
                                 <div class="card__body">
-                                    <div class="card__title--like-fb">
+                                    <div class="card__header card__header--like-fb">
                                         <div class="card__avatar">
                                             <svg class="card__avatar-icon">
                                                 <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
@@ -100,38 +109,156 @@
                                             This is the title
                                         </h3>
                                     </div>
-                                    <p class="card__text">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
-                                    </p>
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                        </p>
+                                        <div class="card__image">
+                                            <img src="assets/images//hero.jpg" class="card__img">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="card">
+                                <div class="card__body">
+                                    <div class="card__header card__header--like-fb">
+                                        <div class="card__avatar">
+                                            <svg class="card__avatar-icon">
+                                                <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
+                                            </svg>
+                                        </div>
+                                        <h3 class="card__title">
+                                            This is the title
+                                        </h3>
+                                    </div>
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                        </p>
+                                        <div class="card__image">
+                                            <img src="assets/images//hero.jpg" class="card__img">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="card">
+                                <div class="card__body">
+                                    <div class="card__header card__header--like-fb">
+                                        <div class="card__avatar">
+                                            <svg class="card__avatar-icon">
+                                                <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
+                                            </svg>
+                                        </div>
+                                        <h3 class="card__title">
+                                            This is the title
+                                        </h3>
+                                    </div>
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                        </p>
+                                        <div class="card__image">
+                                            <img src="assets/images//hero.jpg" class="card__img">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <div class="card">
+                                <div class="card__body">
+                                    <div class="card__header card__header--like-fb">
+                                        <div class="card__avatar">
+                                            <svg class="card__avatar-icon">
+                                                <use xlink:href="assets/images/sprite.svg#icon-owl"></use>
+                                            </svg>
+                                        </div>
+                                        <h3 class="card__title">
+                                            This is the title
+                                        </h3>
+                                    </div>
+                                    <div class="card__content">
+                                        <p class="card__text">
+                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                        </p>
+                                        <div class="card__image">
+                                            <img src="assets/images//hero.jpg" class="card__img">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+            <footer>
+                <div class="footer">
+                    <div class="footer__wrapper">
+                        <div class="footer__header">
+                            <h2>Contact</h2>
+                        </div>
+                        <div class="footer__body">
+                            <div class="row">
+                                <div class="col-12 col-md-6">
+                                    <div class="contact__item">
+                                        <div class="contact__item-icon">
+                                            <svg class="contact__item-svg">
+                                                <use xlink:href="assets/images/sprite.svg#icon-facebook"></use>
+                                            </svg>
+                                        </div>
+                                        <a href="https://www/facebook.com/sshsh" class="contact__link">
+                                            www.facebook.com/sshsh
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="contact__item">
+                                        <div class="contact__item-icon">
+                                            <svg class="contact__item-svg">
+                                                <use xlink:href="assets/images/sprite.svg#icon-envelop"></use>
+                                            </svg>
+                                        </div>
+                                        <a href="mailto:reach2101@gmail.com">reach2101@gmail.com</a>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="contact__item">
+                                        <div class="contact__item-icon">
+                                            <svg class="contact__item-svg">
+                                                <use xlink:href="assets/images/sprite.svg#icon-mobile"></use>
+                                            </svg>
+                                        </div>
+                                        <a href="tel:0336086407" class="contact__link">
+                                            0336086407
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="contact__item">
+                                        <div class="contact__item-icon">
+                                            <svg class="contact__item-svg">
+                                                <use xlink:href="assets/images/sprite.svg#icon-location2"></use>
+                                            </svg>
+                                        </div>
+                                        <span>
+                                            Phú nhuận - Hồ Chí Minh
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
-        <div class="menu-bottom">
-            <nav class="menu-bottom__board">
-                <ul class="div nav--row nav--center">
-                    <li class="nav__item">
-                        <a href="#section-one" class="nav__link nav__link--brand">
-                            Kỹ năng
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#section-two" class="nav__link nav__link--brand">
-                            Tài lẻ 
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#" class="nav__link nav__link--brand">
-                            Liên hệ
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </nav>
     </main>
+    <div style="position: fixed; width: 100%; top: 18rem; left: 0; z-index: -1;">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,64L30,96C60,128,120,192,180,186.7C240,181,300,107,360,112C420,117,480,203,540,240C600,277,660,267,720,229.3C780,192,840,128,900,128C960,128,1020,192,1080,234.7C1140,277,1200,299,1260,298.7C1320,299,1380,277,1410,266.7L1440,256L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path></svg>
+    </div>
     <script src="bundled.js"></script>
 </body>
 </html>
