update reveal on scroll and improve performance

--- a/app/index.html
+++ b/app/index.html
@@ -124,7 +124,7 @@
                             
                         </div>
 
-                        <div class="card grid-item">
+                        <div class="card card--reveal grid-item">
                             <div class="card__body">
                                 <div class="card__header card__header--like-fb">
                                     <div class="card__avatar">
@@ -154,7 +154,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card grid-item">
+                        <div class="card card--reveal grid-item">
                             <div class="card__body">
                                 <div class="card__header card__header--like-fb">
                                     <div class="card__avatar">
@@ -190,7 +190,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card grid-item">
+                        <div class="card card--reveal grid-item">
                             <div class="card__body">
                                 <div class="card__header card__header--like-fb">
                                     <div class="card__avatar">
@@ -213,7 +213,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card grid-item">
+                        <div class="card card--reveal grid-item">
                             <div class="card__body">
                                 <div class="card__header card__header--like-fb">
                                     <div class="card__avatar">
@@ -227,7 +227,8 @@
                                 </div>
                                 <div class="card__content">
                                     <p class="card__text">
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore...
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo eius, dolorem similique minima nihil vel hic praesentium inventore.
+                                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse illum corrupti est dolorem nostrum dignissimos debitis libero id! Ipsam veritatis, vero eum pariatur quibusdam quae aliquam cum quos sequi velit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis provident nam explicabo quas officiis laboriosam inventore, quo id, repudiandae in nihil excepturi nobis sunt mollitia, veniam aliquid optio cumque autem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum hic, id excepturi corporis alias architecto omnis quidem. Reprehenderit, accusantium at? Alias excepturi quaerat cum sint exercitationem fuga iure qui reprehenderit. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate eos, sit optio et impedit sed molestiae nobis dicta excepturi officiis mollitia porro, dolore beatae vel, illo voluptas voluptatum nostrum eum.
                                     </p>
                                     <div class="card__image">
                                         <img src="assets/images//hero.jpg" class="card__img">
@@ -248,7 +249,7 @@
                         <div class="grid-col col-12 col-md-6">
                             
                         </div>
-                        <div class="card grid-item">
+                        <div class="card card--reveal grid-item">
                             <div class="card__body">
                                 <div class="card__header card__header--like-fb">
                                     <div class="card__avatar">
@@ -276,7 +277,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card grid-item">
+                        <div class="card card--reveal grid-item">
                             <div class="card__body">
                                 <div class="card__header card__header--like-fb">
                                     <div class="card__avatar">
@@ -304,7 +305,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card grid-item">
+                        <div class="card card--reveal grid-item">
                             <div class="card__body">
                                 <div class="card__header card__header--like-fb">
                                     <div class="card__avatar">
@@ -326,7 +327,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card grid-item">
+                        <div class="card card--reveal grid-item">
                             <div class="card__body">
                                 <div class="card__header card__header--like-fb">
                                     <div class="card__avatar">
